--- a/index.ipynb
+++ b/index.ipynb
@@ -4,6 +4,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Statistical Methods in Pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "\n",
+    "In this lesson you'll learn how to use some of the key summary statistics methods in Pandas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Objectives:\n",
+    "You will be able to:\n",
+    "* Understand and use the df.describe() and df.info() summary statistics methods\n",
+    "* Use built-in Pandas methods for calculating summary statistics (pd.mean, pd.std, count(), sum(), mean(), median(), std(), var() and quantile())\n",
+    "* Apply a function to every element in a Series or DataFrame using s.apply() and df.applymap()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Dictionaries\n",
     "\n",
     "Another built in python data structure is the dictionary. Dictionaries creating mappings between key value pairs like so:  \n",
@@ -1286,6 +1313,15 @@
     "           'num_reviews' : ['mean', 'max']}\n",
     "df.groupby('theme_name').agg(agg_dict)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "In this lesson we looked at some of the key summary statistics methods in Pandas. In the next lesson ou'll get some hands on experience working with them."
+   ]
   }
  ],
  "metadata": {
@@ -1304,7 +1340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
