--- a/index.ipynb
+++ b/index.ipynb
@@ -1320,7 +1320,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "In this lesson we looked at some of the key summary statistics methods in Pandas. In the next lesson ou'll get some hands on experience working with them."
+    "In this lesson we looked at some of the key summary statistics methods in Pandas. In the next lesson you'll get some hands on experience working with them."
    ]
   }
  ],
